fixed image size and spacing on small screens

--- a/src/components/image/index.scss
+++ b/src/components/image/index.scss
@@ -1,7 +1,11 @@
+@import '../../styles/variables.scss';
+
 .pz-Img {
   width: 100%;
 
-  > div:first-child {
-    padding-bottom: 50% !important;
+  @media all and (min-width: $screen__bp-md *1px) {
+    > div:first-child {
+      padding-bottom: 50% !important;
+    }
   }
 }
